2021年 5月23日 日曜日 23時51分16秒 JST

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,13 @@
 }
 
 .Margins{
+    padding-left: 6%;
+    width: 88%;
+    padding-bottom: 15px;
+/*
     padding-left: 21%;
     width: 58%;
+*/
 }
 
 .AbstractMargins{
