--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,8 @@
 .LatexTitle{
     font-family: CMR;
     font-size: 40px;
-    padding-top: 40vh;
+/*    padding-top: 40vh; */
+    padding-top: 1vh;
     text-align: center;
     margin-bottom: 20px;
 }
